--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ python-dotenv==1.0.1
 # Yandex services
 yandex-speechkit==1.5.0
 requests==2.31.0
-grpcio==1.60.0
-protobuf==4.25.1
+grpcio-tools==1.48.2
+protobuf==3.20.3
 
 # NLP & AI
 gigachat>=0.1.35,<0.2.0
@@ -40,3 +40,6 @@ transformers==4.49.0
 
 # Дополнительные утилиты
 ffmpeg-python==0.2.0
+
+aiohttp==3.9.3
+async-timeout==4.0.3
