--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ python-dotenv==1.0.1
 
 # Yandex services
 yandex-speechkit==1.5.0
+pyyaml==6.0.1
 requests==2.31.0
 grpcio-tools==1.48.2
 protobuf==3.20.3
